# pyphi

./: .gitignore  CLAUDE.md  pyproject.toml
docs/superpowers/plans/: 2026-03-24-pytest-suite.md  2026-03-26-bugfixes.md  2026-03-26-notebooks.md
docs/superpowers/specs/: 2026-03-24-pytest-design.md  2026-03-26-notebooks-design.md
notebooks/01_core/: 01_pca.ipynb  02_pls.ipynb  03_prediction_and_monitoring.ipynb  04_missing_data.ipynb
notebooks/03_advanced/: 01_multiblock_pls.ipynb  02_opls_cca.ipynb  03_lpls.ipynb  04_jrpls_tpls.ipynb  05_varimax_rotation.ipynb  06_lwpls.ipynb  07_bootstrap_and_polynomial.ipynb
notebooks/04_batch/: 01_batch_alignment.ipynb  02_mpca_mpls.ipynb  03_batch_monitoring.ipynb
pyphi/: calc.py
tests/: conftest.py  run_results.txt  test_batch.py  test_calc.py  test_plots.py
