[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyphi-mvda"
dynamic = ["version"]
description = "A Python toolbox for multivariate analysis using PCA and PLS methods"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sal Garcia", email = "sgarciam@ic.ac.uk" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "bokeh",
    "matplotlib",
    "nbformat>=5.8.0",
    "notebook>=6.5.7",
    "numpy",
    "openpyxl",
    "pandas",
    "pyomo",
    "scipy",
    "statsmodels",
    "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://salvadorgarciamunoz.github.io/pyphi/"

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.hatch.version]
path = "pyphi/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyphi"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyphi",
    "/README.md",
    "/LICENSE",
    "/requirements.txt",
    "/docs",
    "/examples",
]
